--- a/code/trunk/prototype/web-app/css/main.css
+++ b/code/trunk/prototype/web-app/css/main.css
@@ -16,6 +16,7 @@ p { margin:0; padding:0; }
 .select_1 { width:132px; margin: 0 10px 0 0; }
 .select_2 { width:330px; }
 
+.black_overlay{display:none;position:absolute;top:0%;left:0%;width:100%;height:100%;background-color:black;z-index:1001;-moz-opacity:0.6;opacity:.60;filter:alpha(opacity=60);}
 .alert_div_2 { background:url(../images/alert_div_bg_2.png) left top no-repeat; left:0; top:0; width:680px; height:421px; padding:20px;_padding:20px 20px 0 20px; position:relative; }
 .alert_div_2 .title { color:#006ba2; font-size:14px; font-weight:bold; margin:0 0 20px 0; }
 .alert_div_2 .title img { float:right; border:none; }
