--- a/code/trunk/prototype/web-app/css/main.css
+++ b/code/trunk/prototype/web-app/css/main.css
@@ -143,6 +143,8 @@ p { margin:0; padding:0; }
 .login a:hover { color:#fff; text-decoration:underline; }
 .login .link {text-align:right; }
 .login .error {color:red;font-size:12px}
+.login_2 .error {color:red;font-size:12px}
+.login_3 .error {color:red;font-size:12px}
 /*--header end--*/
 .xq_body { background:url(../images/xq_bg_1.png) left top repeat-x; height:459px; }
 .maindish_content { width:525px; float:left; padding:0 20px 0 5px; }
